fix well overlap in commands and packages tab

--- a/client/assets/styles/scss/modals/modals-forms.scss
+++ b/client/assets/styles/scss/modals/modals-forms.scss
@@ -232,6 +232,7 @@
       }
 
       &.well-merged {
+        background: $white;
         border-left: 0;
         border-right: 0;
         left: $input-border;
